--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 eureka:
-   client:
+   lient:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
      defaultZone: http://localhost:8761/eureka
    instance:
-     hostname:localhos
+     hostname:localhost
